<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_restaurant"
        android:contentDescription="@null"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/ivPastel"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/pastel_de_choclo"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tvNombrePastel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pastel_de_choclo"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/ivPastel"
        app:layout_constraintStart_toEndOf="@id/ivPastel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/tvLabelCantPastel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cant"
        android:labelFor="@id/etCantPastel"
        app:layout_constraintTop_toBottomOf="@id/tvNombrePastel"
        app:layout_constraintStart_toStartOf="@id/tvNombrePastel"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/etCantPastel"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/money_zero"
        android:importantForAutofill="no"
        tools:targetApi="o"
        app:layout_constraintTop_toTopOf="@id/tvLabelCantPastel"
        app:layout_constraintStart_toEndOf="@id/tvLabelCantPastel"
        android:layout_marginStart="12dp"/>

    <TextView
        android:id="@+id/tvSubtotalPastel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/money_zero"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvSubtotalCazuela"
        app:layout_constraintStart_toEndOf="@+id/ivPastel"
        app:layout_constraintTop_toBottomOf="@id/etCantPastel"
        app:layout_constraintVertical_bias="0.067" />

    <ImageView
        android:id="@+id/ivCazuela"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/cazuela_de_pollo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPastel" />

    <TextView
        android:id="@+id/tvNombreCazuela"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cazuela"
        android:labelFor="@id/etCantCazuela"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/ivCazuela"
        app:layout_constraintStart_toEndOf="@id/ivCazuela"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/tvLabelCantCazuela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cant"
        app:layout_constraintTop_toBottomOf="@id/tvNombreCazuela"
        app:layout_constraintStart_toStartOf="@id/tvNombreCazuela"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/etCantCazuela"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:gravity="center"
        android:text="@string/money_zero"
        android:importantForAutofill="no"
        tools:targetApi="o"
        app:layout_constraintTop_toBottomOf="@id/tvLabelCantCazuela"
        app:layout_constraintStart_toEndOf="@id/tvLabelCantCazuela"
        android:layout_marginStart="12dp"/>

    <TextView
        android:id="@+id/tvSubtotalCazuela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_zero"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/etCantCazuela"
        app:layout_constraintStart_toStartOf="@id/tvNombreCazuela"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvLabelComida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comida"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/ivCazuela"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="36dp"/>

    <TextView
        android:id="@+id/tvTotalComida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/money_zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLabelComida"
        app:layout_constraintTop_toTopOf="@id/tvLabelComida" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swPropina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/propina"
        app:layout_constraintTop_toBottomOf="@id/tvLabelComida"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tvMontoPropina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_zero"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalFinal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toEndOf="@+id/swPropina"
        app:layout_constraintTop_toTopOf="@id/swPropina"
        app:layout_constraintVertical_bias="0.439" />

    <TextView
        android:id="@+id/tvLabelTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/swPropina"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tvTotalFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_zero"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLabelTotal"
        app:layout_constraintTop_toTopOf="@id/tvLabelTotal" />


</androidx.constraintlayout.widget.ConstraintLayout>